Login - detecção de dispositivo - biblioteca para detecção de dispositivos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "prettier.trailingComma": "none",
     "prettier.semi": false,
     "prettier.tabWidth": 4,
+    "prettier.printWidth": 120,
     "[javascript]": {
         "editor.formatOnSave": true,
         "editor.tabSize": 4,
