--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
     "core-js": "^3.6.4",
+    "mobile-device-detect": "^0.3.3",
     "register-service-worker": "^1.7.1",
     "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
@@ -55,7 +56,8 @@
           "singleQuote": true,
           "semi": false,
           "trailingComma": "none",
-          "tabWidth": 4
+          "tabWidth": 4,
+          "printWidth": 120
         }
       ]
     }
