--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.autoSave": "afterDelay",
-    "workbench.colorTheme": "Material Theme Palenight High Contrast",
+    "workbench.colorTheme": "Community Material Theme Ocean High Contrast",
     "workbench.iconTheme": "material-icon-theme",
     "window.zoomLevel": 0,
     "diffEditor.ignoreTrimWhitespace": false,
