--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-sidebar-menu": "^4.6.2",
     "vue-sweetalert2": "^3.0.6",
     "vuex": "^3.1.3"
   },
